<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aprs_gz_plugins</name>
  <version>0.0.0</version>
  <description>GZ Plugins for aprs lab demo in simulation</description>
  <maintainer email="justin.albrecht@nist.gov">Justin Albrecht</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

